--- a/Exercise-HTML-CSS-1/index.html
+++ b/Exercise-HTML-CSS-1/index.html
@@ -126,7 +126,7 @@
 				
 				<div class="form-group">
 					<label>Experience</label>
-					<textarea></textarea>
+					<textarea class="form-control"></textarea>
 					<button class="btn btn-primary btn-lg btn-block">Submit</button>
 				</div>
 			</form>
